html標籤語意化

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <div class="col-md-5 d-flex align-items-center">
           <div>
             <h2 class="display-4">我的冒險故事：</h2>
-            <p>你紙爸發全家聽，綠間不結縣我究，個毛亮高人。卻高酒死這形易止經我腳家立力還上這可......回男腦回義心便有當會兩水記生這自；演般否前出級就話萬水直無基可住。廣製因，全氣改我？</p>
-            <p>為說過著因識空共十房比面科別工人人變童角力男馬媽手趣。明型大方失，經面事馬，來聲小施大；看地自一適，在書寫賽我在。子帶出麼如就味那解的：最半有手然能勢此精觀山好沒生快我足很麗而變最放，上英灣媽？</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore cupiditate explicabo temporibus ea voluptatibus illo suscipit ullam quasi quo praesentium.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet reiciendis saepe, libero provident dolor a rem officiis, ducimus sunt velit, quia molestiae ratione iure reprehenderit quasi porro corrupti in cumque.</p>
             <a href="#" class="btn btn-outline-primary mt-4 w-100">
               看更多我的冒險故事
             </a>
@@ -46,38 +46,38 @@
         <h2 class="display-4 text-center mb-4">
           我的實戰作品：
         </h2>
-        <div class="row row-cols-1 row-cols-lg-3 g-4">
-          <div class="col">
+        <ul class="row row-cols-1 row-cols-lg-3 g-4">
+          <li class="col">
             <div class="card text-white h-100">
               <img src="https://images.unsplash.com/photo-1497215641119-bbe6d71ebaae?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" class="card-img h-100 object-fit-cover" alt="...">
               <div class="card-img-overlay top-auto bg-dark-gradient">
-                <h5 class="card-title">Card title</h5>
+                <h3 class="card-title">Card title</h3>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 <a href="#" class="btn btn-outline-light w-100 stretched-link">看作品</a>
               </div>
             </div>
-          </div>
-          <div class="col">
+          </li>
+          <li class="col">
             <div class="card text-white h-100">
               <img src="https://images.unsplash.com/photo-1555212697-194d092e3b8f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" class="card-img h-100 " alt="...">
               <div class="card-img-overlay top-auto bg-dark-gradient">
-                <h5 class="card-title">Card title</h5>
+                <h3 class="card-title">Card title</h3>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 <a href="#" class="btn btn-outline-light w-100 stretched-link">看作品</a>
               </div>
             </div>
-          </div>
-          <div class="col">
+          </li>
+          <li class="col">
             <div class="card text-white h-100">
               <img src="https://images.unsplash.com/photo-1541140911322-98afe66ea6da?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80" class="card-img h-100" alt="...">
               <div class="card-img-overlay top-auto bg-dark-gradient">
-                <h5 class="card-title">Card title</h5>
+                <h3 class="card-title">Card title</h3>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 <a href="#" class="btn btn-outline-light w-100 stretched-link">看作品</a>
               </div>
             </div>
-          </div>
-        </div>
+          </li>
+        </ul>
       </div>
     </div>
     <footer class="bg-secondary text-white p-5 ">
@@ -88,14 +88,15 @@
             <p>遇見到世界上另一個地方的您相當開心</p>
             <h3 class="h4">聯絡方式</h3>
             <ul class="list-unstyled">
-              <li><i class="bi bi-envelope-heart"></i> voluptati@email.com</li>
-              <li><i class="bi bi-telephone-plus-fill"></i> 0987-654-321</li>
+              <li><i class="bi bi-envelope-heart"></i><a href="#" class="link-light"> voluptati@email.com</a></li>
+              <li><i class="bi bi-telephone-plus-fill"></i><a href="#" class="link-light"> 0987-654-321</a></li>
             </ul>
             <h3 class="h4">社群關注</h3>
             <ul class="list-unstyled">
-              <li><i class="bi bi-instagram"></i> voluptati</li>
-              <li><i class="bi bi-facebook"></i> fb.me/voluptati</li>
-              <li><i class="bi bi-twitter"></i> voluptati</li>
+              <li><i class="bi bi-instagram"></i><a href="#" class="link-light"> voluptati</a></li>
+              <li><i class="bi bi-facebook"></i><a href="#" class="link-light"> fb.me/voluptati</a></li>
+              <li><i class="bi bi-twitter"></i><a href="#" class="link-light"
+                > voluptati</a></li>
             </ul>
             <p>© 2022 by Huan. created with Bootstrap 5.</p>
           </div>
